registration mobile bug fixed

--- a/css/style.scss
+++ b/css/style.scss
@@ -1874,6 +1874,9 @@ $text-color: #222222;
     width: 342px;
     height: 45px;
   }
+  .registration-info {
+    margin: 0 0 0 8px;
+  }
   .registration-info-top {
     margin-top: 40px;
   }
